fixing the webpage

--- a/index.html
+++ b/index.html
@@ -121,20 +121,20 @@ This library is distributed under the terms of the GNU Lesser General
 Public License version 3.
 <ul>
   <li> Third release (2013 february 25th - bugfix):
-  <a href="http://perso.ens-lyon.fr/damien.pous/ra/RelationAlgebra-1.2.tar.bz2">
+  <a href="http://perso.ens-lyon.fr/damien.pous/ra/RelationAlgebra-1.2.tar.gz">
   RelationAlgebra-1.2.tar.gz</a> (compiles with Coq v8.4pl1 and v8.4pl4).
   <li> Second release (2013 february 15th):
-  <a href="http://perso.ens-lyon.fr/damien.pous/ra/RelationAlgebra-1.1.tar.bz2">
+  <a href="http://perso.ens-lyon.fr/damien.pous/ra/RelationAlgebra-1.1.tar.gz">
   RelationAlgebra-1.1.tar.gz</a> (compiles with an earlier version of Coq v8.4).
   <li> First release (2012 december 16th):
-  <a href="http://perso.ens-lyon.fr/damien.pous/ra/RelationAlgebra-1.0.tar.bz2">
+  <a href="http://perso.ens-lyon.fr/damien.pous/ra/RelationAlgebra-1.0.tar.gz">
   RelationAlgebra-1.0.tar.gz</a>.
 </ul>
 Alternatively, the
 library is available as a Coq contribution for <a
-href="http://coq.inria.fr/pylons/pylons/contribs/view/RelationAlgebra/trunk">trunk</a>
+href="http://www.lix.polytechnique.fr/coq/pylons/coq/pylons/contribs/view/RelationAlgebra/trunk">trunk</a>
 and <a
-href="http://coq.inria.fr/pylons/pylons/contribs/view/RelationAlgebra/v8.4">v8.4</a>.
+href="http://www.lix.polytechnique.fr/coq/pylons/coq/pylons/contribs/view/RelationAlgebra/v8.4">v8.4</a>.
 
 <h2 id="relw">Related papers or talks</h2>
 
