--- a/index.html
+++ b/index.html
@@ -118,11 +118,14 @@ verification: </p>
 <h2 id="download">Download</h2>
 
 This library is distributed under the terms of the GNU Lesser General
-Public License version 3.
+Public License version 3. 
 <ul>
+  <li> Fourth release (2015 july 27th - bugfix):
+  <a href="http://perso.ens-lyon.fr/damien.pous/ra/RelationAlgebra-1.3.tar.gz">
+  RelationAlgebra-1.3.tar.gz</a> (compiles at least with Coq v8.4pl6).
   <li> Third release (2013 february 25th - bugfix):
   <a href="http://perso.ens-lyon.fr/damien.pous/ra/RelationAlgebra-1.2.tar.gz">
-  RelationAlgebra-1.2.tar.gz</a> (compiles with Coq v8.4pl1 and v8.4pl4).
+  RelationAlgebra-1.2.tar.gz</a> (compiles at least with Coq v8.4pl1 and v8.4pl4).
   <li> Second release (2013 february 15th):
   <a href="http://perso.ens-lyon.fr/damien.pous/ra/RelationAlgebra-1.1.tar.gz">
   RelationAlgebra-1.1.tar.gz</a> (compiles with an earlier version of Coq v8.4).
